{
  "version": 4,
  "terraform_version": "1.0.5",
  "serial": 36,
  "lineage": "4e53eb13-e45e-bde3-9129-9ca63ffbe4ed",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "network1_allow_http_ssh_rdp_icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "3389"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2021-10-21T11:56:39.636-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/assignment-329605/global/firewalls/network1-allow-http-ssh-rdp-icmp",
            "log_config": [],
            "name": "network1-allow-http-ssh-rdp-icmp",
            "network": "https://www.googleapis.com/compute/v1/projects/assignment-329605/global/networks/networka",
            "priority": 1000,
            "project": "assignment-329605",
            "self_link": "https://www.googleapis.com/compute/v1/projects/assignment-329605/global/firewalls/network1-allow-http-ssh-rdp-icmp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.networka"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "networkb-allow-http-ssh-rdp-icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "3389"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2021-10-21T11:56:28.956-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/assignment-329605/global/firewalls/networkb-allow-http-ssh-rdp-icmp",
            "log_config": [],
            "name": "networkb-allow-http-ssh-rdp-icmp",
            "network": "https://www.googleapis.com/compute/v1/projects/assignment-329605/global/networks/networkb",
            "priority": 1000,
            "project": "assignment-329605",
            "self_link": "https://www.googleapis.com/compute/v1/projects/assignment-329605/global/firewalls/networkb-allow-http-ssh-rdp-icmp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.networkb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "networka",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/assignment-329605/global/networks/networka",
            "mtu": 0,
            "name": "networka",
            "project": "assignment-329605",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/assignment-329605/global/networks/networka"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "networkb",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/assignment-329605/global/networks/networkb",
            "mtu": 0,
            "name": "networkb",
            "project": "assignment-329605",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/assignment-329605/global/networks/networkb"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "networkcsubnet-asia",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-10-21T12:06:42.371-07:00",
            "gateway_address": "111.130.0.1",
            "id": "projects/assignment-329605/regions/asia-south1/subnetworks/networkcsubnet-asia",
            "ip_cidr_range": "111.130.0.0/20",
            "name": "networkcsubnet-asia",
            "network": "https://www.googleapis.com/compute/v1/projects/assignment-329605/global/networks/networkb",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "assignment-329605",
            "purpose": "PRIVATE",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/assignment-329605/regions/asia-south1/subnetworks/networkcsubnet-asia",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.networkb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subneta",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-10-21T12:06:42.557-07:00",
            "gateway_address": "168.130.0.1",
            "id": "projects/assignment-329605/regions/us-central1/subnetworks/subneta",
            "ip_cidr_range": "168.130.0.0/20",
            "name": "subneta",
            "network": "https://www.googleapis.com/compute/v1/projects/assignment-329605/global/networks/networka",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "assignment-329605",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/assignment-329605/regions/us-central1/subnetworks/subneta",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.networka"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetb",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-10-21T12:11:11.440-07:00",
            "gateway_address": "10.130.0.1",
            "id": "projects/assignment-329605/regions/europe-west1/subnetworks/subnetb",
            "ip_cidr_range": "10.130.0.0/24",
            "name": "subnetb",
            "network": "https://www.googleapis.com/compute/v1/projects/assignment-329605/global/networks/networka",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "assignment-329605",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/assignment-329605/regions/europe-west1/subnetworks/subnetb",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.networka"
          ]
        }
      ]
    },
    {
      "module": "module.networka-eu-vm",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20210916",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/assignment-329605/zones/europe-west1-c/disks/networka-eu-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/assignment-329605/zones/europe-west1-c/instances/networka-eu-vm",
            "instance_id": "3928716209320363400",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "oY2d8NeX05c=",
            "name": "networka-eu-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.140.171.32",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/assignment-329605/global/networks/networka",
                "network_ip": "10.130.0.2",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/assignment-329605/regions/europe-west1/subnetworks/subnetb",
                "subnetwork_project": "assignment-329605"
              }
            ],
            "project": "assignment-329605",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/assignment-329605/zones/europe-west1-c/instances/networka-eu-vm",
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "europe-west1-c"
          },
          "dependencies": [
            "google_compute_network.networka",
            "google_compute_subnetwork.subnetb"
          ]
        }
      ]
    },
    {
      "module": "module.networka-us-vm",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20210916",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/assignment-329605/zones/us-central1-a/disks/networka-us-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/assignment-329605/zones/us-central1-a/instances/networka-us-vm",
            "instance_id": "6109204623700788405",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "oY2d8NeX05c=",
            "name": "networka-us-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.67.131.212",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/assignment-329605/global/networks/networka",
                "network_ip": "168.130.0.2",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/assignment-329605/regions/us-central1/subnetworks/subneta",
                "subnetwork_project": "assignment-329605"
              }
            ],
            "project": "assignment-329605",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/assignment-329605/zones/us-central1-a/instances/networka-us-vm",
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.networka",
            "google_compute_subnetwork.subneta"
          ]
        }
      ]
    },
    {
      "module": "module.networkc-asia-vm1",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20210916",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/assignment-329605/zones/asia-south1-a/disks/networkc-asia-vm1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Skylake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/assignment-329605/zones/asia-south1-a/instances/networkc-asia-vm1",
            "instance_id": "7118324288160793791",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "oY2d8NeX05c=",
            "name": "networkc-asia-vm1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.93.28.124",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/assignment-329605/global/networks/networkb",
                "network_ip": "111.130.0.3",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/assignment-329605/regions/asia-south1/subnetworks/networkcsubnet-asia",
                "subnetwork_project": "assignment-329605"
              }
            ],
            "project": "assignment-329605",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/assignment-329605/zones/asia-south1-a/instances/networkc-asia-vm1",
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "asia-south1-a"
          },
          "dependencies": [
            "google_compute_network.networkb",
            "google_compute_subnetwork.networkcsubnet-asia"
          ]
        }
      ]
    },
    {
      "module": "module.networkc-asia-vm2",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20210916",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/assignment-329605/zones/asia-south1-b/disks/networkc-asia-vm2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Skylake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/assignment-329605/zones/asia-south1-b/instances/networkc-asia-vm2",
            "instance_id": "7528312876870403232",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "oY2d8NeX05c=",
            "name": "networkc-asia-vm2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.93.100.18",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/assignment-329605/global/networks/networkb",
                "network_ip": "111.130.0.2",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/assignment-329605/regions/asia-south1/subnetworks/networkcsubnet-asia",
                "subnetwork_project": "assignment-329605"
              }
            ],
            "project": "assignment-329605",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/assignment-329605/zones/asia-south1-b/instances/networkc-asia-vm2",
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "asia-south1-b"
          },
          "dependencies": [
            "google_compute_subnetwork.networkcsubnet-asia",
            "google_compute_network.networkb"
          ]
        }
      ]
    }
  ]
}